# fish-lib

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: example.yml  library.yml  rust.yml
example/: .env  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
example/src/: main.rs  tests.rs
example/src/tests/: test_database.rs
example_data/: fish_stats.json  items.json  locations.json  settings.json
example_data/schemas/: fish_stats.json  items.json  locations.json
migrations/2025-01-25-113204_create_users/: down.sql  up.sql
migrations/2025-01-25-113210_create_fishes/: down.sql  up.sql
migrations/2025-01-25-113210_create_specimens/: down.sql  up.sql
migrations/2025-01-26-102615_create_ponds/: down.sql  up.sql
migrations/2025-01-26-105756_create_fishing_history_entries/: down.sql  up.sql
migrations/2025-02-09-152133_fish_user_locations/: down.sql  up.sql
migrations/2025-02-10-160657_fish_items/: down.sql  up.sql
src/: config.rs  data.rs  database.rs  db_diesel.rs  dto.rs  entities.rs  enums.rs  game.rs  lib.rs  models.rs  schema.rs  tests.rs  traits.rs
src/config/: validation_error.rs  validation_report.rs
src/data/: encounter_data.rs  fish_data.rs  item_data.rs  location_data.rs  season_data.rs  settings.rs  species_data.rs
src/db_diesel/: diesel_database.rs
src/dto/: inventory.rs  location_unlock_requirements.rs  user_location_unlock.rs
src/entities/: fish_stats.rs
src/enums/: item_category.rs  item_type.rs  season.rs
src/game/: asset_server.rs  errors.rs  interface.rs  prelude.rs  repositories.rs  service_provider.rs  services.rs  systems.rs
src/models/: fish.rs  fishing_history_entry.rs  item.rs  pond.rs  specimen.rs  user.rs  user_location.rs
src/tests/: mock.rs  models.rs  repositories.rs  services.rs  test_asset_server.rs  test_config.rs  test_database.rs
src/traits/: into_arc_map.rs  model.rs  repository.rs
src/utils/: math.rs  random.rs
test/: .env  Dockerfile  Makefile  docker-compose.yml
test/dev/: .env  docker-compose.yml
(+58 files in other folders)
