[package]
name = "fish-lib"
description = "A work-in-progress fishing game library containing the game/storage logic for a discord fishing game I'm working on."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Zitronenjoghurt/fish-lib"

[dependencies]
chrono = "0.4.39"
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
