[package]
name = "fish-lib"
description = "A work-in-progress fishing game library containing the game/storage logic for a discord fishing game I'm working on."
version = "0.2.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Zitronenjoghurt/fish-lib"
exclude = [
    ".github/*",
    "example/*",
    "test/*",
]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10.1", features = ["serde"] }
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
noise = "0.9.0"
rand = "0.9.0"
rand_distr = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
